Añadimos la funcionalidad demo, probar la app sin registro